metadata/objects/graxtracking_object_cindex__x.object
<CustomObject>
    <description>graxtracking_object__cindex</description>
    <externalDataSource>grax_odata</externalDataSource>
    <externalName>graxtracking_object__cindex</externalName>
    <fields>
        <fullName>Additional_Comments_c__c</fullName>
        <description>Additional_Comments__c</description>
        <externalDeveloperName>Additional_Comments__c</externalDeveloperName>
        <label>Additional_Comments__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>Case__c</externalDeveloperName>
        <label>Case Lookup</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>External Tracking Objects</relationshipLabel>
        <relationshipName>External_Tracking_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number_c__c</fullName>
        <description>Case_Number__c</description>
        <externalDeveloperName>Case_Number__c</externalDeveloperName>
        <label>Case_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject_c__c</fullName>
        <description>Case_Subject__c</description>
        <externalDeveloperName>Case_Subject__c</externalDeveloperName>
        <label>Case_Subject__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_c__c</fullName>
        <description>Case__c</description>
        <externalDeveloperName>Case__c</externalDeveloperName>
        <label>Case__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_c_grax_xf_case__c</fullName>
        <description>Case__c_grax_xf_case</description>
        <externalDeveloperName>Case__c_grax_xf_case</externalDeveloperName>
        <label>Case__c_grax_xf_case</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <description>ConnectionReceivedId</description>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>ConnectionReceivedId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <description>ConnectionSentId</description>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>ConnectionSentId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <description>CreatedById</description>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>CreatedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById_grax_xf_user__c</fullName>
        <description>CreatedById_grax_xf_user</description>
        <externalDeveloperName>CreatedById_grax_xf_user</externalDeveloperName>
        <label>CreatedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>CreatedDate</description>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Key__c</fullName>
        <description>GRAX_Execution_Unique_Key</description>
        <externalDeveloperName>GRAX_Execution_Unique_Key</externalDeveloperName>
        <label>GRAX_Execution_Unique_Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Execution_Unique_Keys__c</fullName>
        <description>GRAX_Execution_Unique_Keys</description>
        <externalDeveloperName>GRAX_Execution_Unique_Keys</externalDeveloperName>
        <label>GRAX_Execution_Unique_Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Version__c</fullName>
        <description>GRAX_Version</description>
        <externalDeveloperName>GRAX_Version</externalDeveloperName>
        <label>GRAX_Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>LastActivityDate</description>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>LastActivityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name</description>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>OwnerId</description>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId_grax_xf_OwnerId__c</fullName>
        <description>OwnerId_grax_xf_OwnerId</description>
        <externalDeveloperName>OwnerId_grax_xf_OwnerId</externalDeveloperName>
        <label>OwnerId_grax_xf_OwnerId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Code_c__c</fullName>
        <description>Shipment_Code__c</description>
        <externalDeveloperName>Shipment_Code__c</externalDeveloperName>
        <label>Shipment_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>graxModifiedTime__c</fullName>
        <description>graxModifiedTime</description>
        <externalDeveloperName>graxModifiedTime</externalDeveloperName>
        <label>graxModifiedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grax_Case_r_CaseNumber__c</fullName>
        <description>grax_Case__r_CaseNumber</description>
        <externalDeveloperName>grax_Case__r_CaseNumber</externalDeveloperName>
        <label>grax_Case__r_CaseNumber</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_OwnerId_xf__c</fullName>
        <description>grax_OwnerId_xf</description>
        <externalDeveloperName>grax_OwnerId_xf</externalDeveloperName>
        <label>grax_OwnerId_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Owner_Name__c</fullName>
        <description>grax_Owner_Name</description>
        <externalDeveloperName>grax_Owner_Name</externalDeveloperName>
        <label>Owner Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_case_c_name__c</fullName>
        <description>grax_case__c_name</description>
        <externalDeveloperName>grax_case__c_name</externalDeveloperName>
        <label>grax_case__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_case_xf__c</fullName>
        <description>grax_case_xf</description>
        <externalDeveloperName>grax_case_xf</externalDeveloperName>
        <label>grax_case_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionreceivedid_name__c</fullName>
        <description>grax_connectionreceivedid_name</description>
        <externalDeveloperName>grax_connectionreceivedid_name</externalDeveloperName>
        <label>grax_connectionreceivedid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionsentid_name__c</fullName>
        <description>grax_connectionsentid_name</description>
        <externalDeveloperName>grax_connectionsentid_name</externalDeveloperName>
        <label>grax_connectionsentid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ownerid_name__c</fullName>
        <description>grax_ownerid_name</description>
        <externalDeveloperName>grax_ownerid_name</externalDeveloperName>
        <label>grax_ownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_tracking_object_c_name__c</fullName>
        <description>grax_tracking_object__c_name</description>
        <externalDeveloperName>grax_tracking_object__c_name</externalDeveloperName>
        <label>grax_tracking_object__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_tracking_object_c_xf__c</fullName>
        <description>grax_tracking_object__c_xf</description>
        <externalDeveloperName>grax_tracking_object__c_xf</externalDeveloperName>
        <label>grax_tracking_object__c_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_user_xf__c</fullName>
        <description>grax_user_xf</description>
        <externalDeveloperName>grax_user_xf</externalDeveloperName>
        <label>grax_user_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_xf__c</fullName>
        <description>grax_xf</description>
        <externalDeveloperName>grax_xf</externalDeveloperName>
        <label>grax_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxid__c</fullName>
        <description>graxid</description>
        <externalDeveloperName>graxid</externalDeveloperName>
        <label>graxid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>graxorgid__c</fullName>
        <description>graxorgid</description>
        <externalDeveloperName>graxorgid</externalDeveloperName>
        <label>graxorgid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>External Tracking Object</label>
    <pluralLabel>External Tracking Objects</pluralLabel>
</CustomObject>